--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             const [zoomImage, setZoomImage] = useState(null);
             const [loading, setLoading] = useState(true);
             const [file, setFile] = useState(null);
+            const [showTools, setShowTools] = useState(false);
 
             // FUNCIÓN BORRAR RUTINA
             const handleDeleteWorkout = async (workoutId) => {
@@ -318,6 +319,8 @@
 
             {/* VISTA CLIENTE */}
             if (currentUser.role === 'client') return (
+                <>
+             {showTools && <ToolsModal />}
                 <div className="min-h-screen bg-gray-100 pb-20">
                     {zoomImage && (
                         <div className="fixed inset-0 z-50 bg-black/95 flex items-center justify-center p-4" onClick={() => setZoomImage(null)}>
@@ -330,6 +333,12 @@
                     </nav>
                     <div className="p-4 max-w-lg mx-auto">
                         <h2 className="text-xl font-bold mb-6 text-indigo-900 text-center uppercase tracking-tighter italic">¡VAMOS {currentUser.name}! 💪</h2>
+                        <button 
+    onClick={() => setShowTools(true)}
+    className="w-full mb-6 bg-white border-2 border-indigo-100 text-indigo-600 p-3 rounded-2xl font-bold flex items-center justify-center gap-2 shadow-sm active:scale-95 transition-transform"
+>
+    <Icon name="stopwatch" /> ABRIR HERRAMIENTAS
+</button>
                         
                         {workouts.filter(w => w.clientId === currentUser.id).map(w => (
                             <div key={w.id} className="bg-white rounded-2xl shadow-md mb-6 overflow-hidden border-b-4 border-indigo-500 relative">
@@ -353,7 +362,77 @@
                         ))}
                     </div>
                 </div>
+                    </>
             );
+            // COMPONENTE FLOTANTE DE HERRAMIENTAS
+const ToolsModal = () => {
+    const [seconds, setSeconds] = useState(0);
+    const [isActive, setIsActive] = useState(false);
+    const [mode, setMode] = useState('chrono'); // 'chrono' o 'timer'
+
+    useEffect(() => {
+        let interval = null;
+        if (isActive) {
+            interval = setInterval(() => {
+                setSeconds(s => mode === 'chrono' ? s + 1 : (s > 0 ? s - 1 : 0));
+            }, 1000);
+        } else {
+            clearInterval(interval);
+        }
+        return () => clearInterval(interval);
+    }, [isActive, mode]);
+
+    const formatTime = (s) => {
+        const mins = Math.floor(s / 60);
+        const secs = s % 60;
+        return `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+    };
+
+    return (
+        <div className="fixed inset-0 z-[60] bg-black/80 flex items-end sm:items-center justify-center p-4">
+            <div className="bg-white w-full max-w-md rounded-t-3xl sm:rounded-3xl overflow-hidden shadow-2xl">
+                <div className="p-6">
+                    <div className="flex justify-between items-center mb-6">
+                        <h2 className="text-xl font-bold text-gray-800 flex items-center gap-2">
+                            <Icon name="screwdriver-wrench" /> Herramientas
+                        </h2>
+                        <button onClick={() => {setIsActive(false); setShowTools(false)}} className="text-gray-400 hover:text-gray-600 text-2xl">
+                            <Icon name="xmark" />
+                        </button>
+                    </div>
+
+                    <div className="flex bg-gray-100 rounded-xl p-1 mb-8">
+                        <button onClick={() => {setMode('chrono'); setSeconds(0); setIsActive(false)}} className={`flex-1 py-2 rounded-lg text-sm font-bold ${mode === 'chrono' ? 'bg-white shadow text-blue-600' : 'text-gray-500'}`}>Cronómetro</button>
+                        <button onClick={() => {setMode('timer'); setSeconds(60); setIsActive(false)}} className={`flex-1 py-2 rounded-lg text-sm font-bold ${mode === 'timer' ? 'bg-white shadow text-blue-600' : 'text-gray-500'}`}>Descanso</button>
+                    </div>
+
+                    <div className="text-center mb-8">
+                        <div className="text-6xl font-mono font-black text-gray-800 tabular-nums mb-4">
+                            {formatTime(seconds)}
+                        </div>
+                        {mode === 'timer' && !isActive && (
+                            <div className="flex justify-center gap-2 mb-4">
+                                {[30, 60, 90].map(t => (
+                                    <button key={t} onClick={() => setSeconds(t)} className="bg-blue-50 text-blue-600 px-3 py-1 rounded-full text-xs font-bold border border-blue-100">{t}s</button>
+                                ))}
+                            </div>
+                        )}
+                    </div>
+
+                    <div className="flex gap-4">
+                        <button onClick={() => setSeconds(0)} className="flex-1 bg-gray-200 text-gray-700 py-4 rounded-2xl font-bold">Reiniciar</button>
+                        <button onClick={() => setIsActive(!isActive)} className={`flex-[2] ${isActive ? 'bg-red-500' : 'bg-green-500'} text-white py-4 rounded-2xl font-bold shadow-lg shadow-green-200`}>
+                            {isActive ? 'PAUSAR' : 'EMPEZAR'}
+                        </button>
+                    </div>
+                </div>
+                <div className="bg-gray-50 p-4 text-center text-[10px] text-gray-400 uppercase tracking-widest">
+                    Activa-T Gym Tools v1.0
+                </div>
+            </div>
+        </div>
+    );
+};
             return null;
         }
 
