--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             const [zoomImage, setZoomImage] = useState(null);
             const [loading, setLoading] = useState(true);
             const [file, setFile] = useState(null);
+            const [showTools, setShowTools] = useState(false);
             
 
             // FUNCIÓN BORRAR RUTINA
