--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             const [loading, setLoading] = useState(true);
             const [file, setFile] = useState(null);
             const [showTools, setShowTools] = useState(false);
+            const [seconds, setSeconds] = useState(0);
+            const [isActive, setIsActive] = useState(false);
             
 
             // FUNCIÓN BORRAR RUTINA
