--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                         onClick={() => { setToolMode('timer'); setSeconds(60); setIsActive(false); }}
                         className={`flex-1 py-2 rounded-lg text-xs font-bold transition-all ${toolMode === 'timer' ? 'bg-white shadow text-indigo-600' : 'text-gray-500'}`}
                     >
-                        DESCANSO
+                        TEMPORIZADOR
                     </button>
                 </div>
                 
