--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
         const firebaseConfig = {
@@ -48,7 +48,7 @@
         // Compartir con React
         window.db = db;
         window.auth = auth;
-        window.firestore = { collection, addDoc, onSnapshot, query, orderBy, deleteDoc, doc };
+        window.firestore = { collection, addDoc, onSnapshot, query, orderBy, deleteDoc, doc, updateDoc };
         window.firebaseAuth = { onAuthStateChanged, signOut };
     </script>
 
