--- a/index.html
+++ b/index.html
@@ -575,3 +575,4 @@
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<GymApp />);
+        </script>
