--- a/index.html
+++ b/index.html
@@ -300,29 +300,44 @@
             );
 
             if (!currentUser) return (
-                <div className="min-h-screen bg-blue-600 flex items-center justify-center p-4">
-                    <div className="bg-white p-8 rounded-2xl shadow-xl w-full max-w-sm">
-                        <h1 className="text-2xl font-bold text-center mb-6 text-blue-800 italic">ACTIVA-T GYM</h1>
-                        <input className="w-full p-3 border rounded mb-3" placeholder="Email" onChange={e => setFormData({...formData, email: e.target.value})} />
-                        <input className="w-full p-3 border rounded mb-3" type="password" placeholder="Contraseña" onChange={e => setFormData({...formData, password: e.target.value})} />
-                        {/* Mensaje de ayuda para instalación */}
-                        <div className="mb-4 p-3 bg-blue-50 rounded-lg border border-blue-200 text-xs text-blue-800">
-                         <p className="font-bold mb-1">📲 Cómo instalar la App:</p>
-                       <div className="block md:hidden">
-                      {navigator.userAgent.includes('iPhone') || navigator.userAgent.includes('iPad') ? (
-                  <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha) dale a los 3 puntos y <strong>"Añadir a pantalla de inicio"</strong>.</p>
-                  ) : (
-                    <p>Pulsa el boton de abajo <strong></strong>que pone <strong>"Instalar"</strong>.</p>
-        )}
-    </div>
-    <p className="hidden md:block">Abre esta web en tu móvil para instalarla como una App.</p>
-</div>
-
-                        <button onClick={handleLogin} className="w-full bg-blue-600 text-white p-3 rounded-lg font-bold">ENTRAR</button
-                        <button onClick={() => setView('register')} className="w-full mt-4 text-blue-600 text-sm italic text-center block">¿No tienes cuenta? Regístrate</button>
-                    </div>
+    <div className="min-h-screen bg-blue-600 flex items-center justify-center p-4">
+        <div className="bg-white p-8 rounded-2xl shadow-xl w-full max-w-sm">
+            <h1 className="text-2xl font-bold text-center mb-6 text-blue-800 italic">ACTIVA-T GYM</h1>
+            
+            {/* BLOQUE DE AYUDA DE INSTALACIÓN */}
+            <div className="mb-4 p-3 bg-blue-50 rounded-lg border border-blue-200 text-[10px] text-blue-800 leading-tight">
+                <p className="font-bold mb-1 uppercase tracking-wider">📲 Cómo instalar la App:</p>
+                <div className="block">
+                    {/iPhone|iPad|iPod/.test(navigator.userAgent) ? (
+                        <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha), baja y dale a <strong>"Añadir a pantalla de inicio"</strong>.</p>
+                    ) : (
+                        <p>Pulsa el botón de abajo que pone <strong>"INSTALAR"</strong> para tenerla en tu menú.</p>
+                    )}
                 </div>
-            );
+            </div>
+
+            {/* FORMULARIO DE LOGIN */}
+            <input 
+                className="w-full p-3 border rounded mb-3" 
+                placeholder="Email" 
+                onChange={e => setFormData({...formData, email: e.target.value})} 
+            />
+            <input 
+                className="w-full p-3 border rounded mb-3" 
+                type="password" 
+                placeholder="Contraseña" 
+                onChange={e => setFormData({...formData, password: e.target.value})} 
+            />
+            <button onClick={handleLogin} className="w-full bg-blue-600 text-white p-3 rounded-lg font-bold">
+                ENTRAR
+            </button>
+            
+            <button onClick={() => setView('register')} className="w-full mt-4 text-blue-600 text-sm italic text-center block">
+                ¿No tienes cuenta? Regístrate
+            </button>
+        </div>
+    </div>
+);
 
             if (currentUser.role === 'admin') return (
     <div className="min-h-screen bg-gray-50">
