--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     {/iPhone|iPad|iPod/.test(navigator.userAgent) ? (
                         <p>Pulsa el botón de <strong>Compartir</strong> (cuadrado con flecha), baja y dale a <strong>"Añadir a pantalla de inicio"</strong>.</p>
                     ) : (
-                        <p>Pulsa el botón de abajo que pone <strong>"INSTALAR"</strong> para tenerla en tu menú.</p>
+                        <p>Dale a los 3 puntos arriba a la derecha <strong>y pulsa añadir  pantalla de inicio</strong> </p>
                     )}
                 </div>
             </div>
