--- a/index.html
+++ b/index.html
@@ -653,7 +653,6 @@ const handleShareAchievement = async () => {
                 <div className="fixed inset-0 z-[200] flex items-center justify-center bg-black/90 p-4 backdrop-blur-sm animate-in fade-in duration-300">
                     <div className="relative w-full max-w-sm flex flex-col items-center">
                         
-                        {/* Botón X para cerrar */}
                         <button 
                             onClick={() => setShowAchievement(false)}
                             className="self-end text-white text-2xl p-2 mb-2"
@@ -661,7 +660,6 @@ const handleShareAchievement = async () => {
                             <Icon name="xmark" />
                         </button>
 
-                        {/* 1. LA TARJETA */}
                         <div 
                             id="achievement-card" 
                             className="aspect-[9/16] w-full overflow-hidden rounded-[2.5rem] bg-gradient-to-br from-blue-600 via-blue-800 to-indigo-950 p-8 shadow-2xl flex flex-col items-center justify-between text-center border-[6px] border-white/20"
@@ -689,7 +687,6 @@ const handleShareAchievement = async () => {
                             </div>
                         </div>
 
-                        {/* 2. EL BOTÓN */}
                         <div className="mt-6 flex flex-col gap-3 w-full">
                             <button 
                                 onClick={handleShareAchievement}
@@ -697,16 +694,16 @@ const handleShareAchievement = async () => {
                             >
                                 <Icon name="share-nodes" /> COMPARTIR LOGRO
                             </button>
-                            <p className="text-white/40 text-[10px] text-center uppercase tracking-widest animate-pulse text-white">
+                            <p className="text-white/40 text-[10px] text-center uppercase tracking-widest text-white">
                                 📸 O haz una captura de pantalla
                             </p>
                         </div>
                     </div>
                 </div>
             )}
-        </div> // Cierre de la vista de cliente
-    ); // Cierre del return de la vista de cliente
-}; // Cierre de la función/componente
+        </div>
+    );
+};
 
 const root = ReactDOM.createRoot(document.getElementById('root'));
 root.render(<GymApp />);
