--- a/index.html
+++ b/index.html
@@ -664,18 +664,18 @@ const handleShareAchievement = async () => {
                                     <div className="inline-block rounded-full bg-white/20 px-4 py-1 text-[10px] font-black uppercase tracking-[0.2em] text-white backdrop-blur-md mb-4">
                                         Activa-T Gym
                                     </div>
-                                    <h2 className="text-4xl font-black italic text-white leading-tight text-white">
+                                    <h2 className="text-4xl font-black italic text-white leading-tight">
                                         ENTRENO<br/>LOGRADO
                                     </h2>
                                 </div>
 
                                 <div className="relative w-full py-10">
-                                    <p className="text-blue-200 text-sm font-medium mb-1 uppercase tracking-widest text-blue-200">Bravo, {currentUser?.name}</p>
-                                    <p className="text-2xl font-bold text-white leading-tight px-4 text-white">{completedWorkoutTitle}</p>
+                                    <p className="text-blue-200 text-sm font-medium mb-1 uppercase tracking-widest">Bravo, {currentUser?.name}</p>
+                                    <p className="text-2xl font-bold text-white leading-tight px-4">{completedWorkoutTitle}</p>
                                 </div>
 
-                                <div className="mb-8 w-full text-center">
-                                    <span className="text-[10px] font-bold text-white/50 uppercase tracking-[0.3em] text-white/50">Sigue mi progreso en</span>
+                                <div className="mb-8 w-full text-center text-white">
+                                    <span className="text-[10px] font-bold text-white/50 uppercase tracking-[0.3em]">Sigue mi progreso en</span>
                                     <br/>
                                     <span className="inline-block mt-2 rounded-lg bg-white px-4 py-2 text-sm font-black text-blue-900 shadow-xl">
                                         @activat_gymdance
@@ -690,15 +690,15 @@ const handleShareAchievement = async () => {
                                 >
                                     <Icon name="share-nodes" /> COMPARTIR LOGRO
                                 </button>
-                                <p className="text-white/40 text-[10px] text-center uppercase tracking-widest text-white/40">
+                                <p className="text-white/40 text-[10px] text-center uppercase tracking-widest animate-pulse">
                                     📸 O haz una captura de pantalla
                                 </p>
                             </div>
                         </div>
                     </div>
                 )}
-            </div>
-        </div>
+            </div> {/* Este cierra el div de la lista de rutinas o contenedor interno */}
+        </div> // Este cierra el contenedor principal de la vista
     );
 };
 
