--- a/index.html
+++ b/index.html
@@ -644,11 +644,13 @@ const handleShareAchievement = async () => {
                         </div>
                     ))}
                 </div>
-                {/* Modal de Logro */}
+
+                {/* --- AQUÍ EMPIEZA EL MODAL DE LOGRO --- */}
                 {showAchievement && (
                     <div className="fixed inset-0 z-[200] flex items-center justify-center bg-black/90 p-4 backdrop-blur-sm animate-in fade-in duration-300">
                         <div className="relative w-full max-w-sm flex flex-col items-center">
                             
+                            {/* Botón X para cerrar */}
                             <button 
                                 onClick={() => setShowAchievement(false)}
                                 className="self-end text-white text-2xl p-2 mb-2"
@@ -656,6 +658,7 @@ const handleShareAchievement = async () => {
                                 <Icon name="xmark" />
                             </button>
 
+                            {/* Tarjeta de Diseño */}
                             <div 
                                 id="achievement-card" 
                                 className="aspect-[9/16] w-full overflow-hidden rounded-[2.5rem] bg-gradient-to-br from-blue-600 via-blue-800 to-indigo-950 p-8 shadow-2xl flex flex-col items-center justify-between text-center border-[6px] border-white/20"
@@ -683,6 +686,7 @@ const handleShareAchievement = async () => {
                                 </div>
                             </div>
 
+                            {/* Botón de Compartir (Fuera de la tarjeta) */}
                             <div className="mt-6 flex flex-col gap-3 w-full">
                                 <button 
                                     onClick={handleShareAchievement}
@@ -697,11 +701,16 @@ const handleShareAchievement = async () => {
                         </div>
                     </div>
                 )}
-            </div> {/* Este cierra el div de la lista de rutinas o contenedor interno */}
-        </div> // Este cierra el contenedor principal de la vista
+                {/* --- AQUÍ TERMINA EL MODAL --- */}
+
+            </div> 
+            {/* Este div cierra el contenedor principal 'p-4' */}
+        </div>
+        /* Este div cierra el 'min-h-screen' */
     );
 };
 
+// Renderizado final
 const root = ReactDOM.createRoot(document.getElementById('root'));
 root.render(<GymApp />);
 </script>
