--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ const handleShareAchievement = async () => {
                                     <div className="inline-block rounded-full bg-white/20 px-4 py-1 text-[10px] font-black uppercase tracking-[0.2em] text-white mb-4">
                                         Activa-T Gym
                                     </div>
-                                    <h2 className="text-4xl font-black italic text-white leading-tight">ENTRENO<br/>LOGRADO</h2>
+                                    <h2 className="text-4xl font-black italic text-white leading-tight">ENTRENO DE HOY<br/>LOGRADO</h2>
                                 </div>
 
                                 <div className="relative w-full py-10">
@@ -671,8 +671,7 @@ const handleShareAchievement = async () => {
                                 </div>
 
                                 <div className="mb-8 w-full text-center text-white">
-                                    <span className="text-[10px] font-bold text-white/50 uppercase tracking-[0.3em] text-white/50">Sigue mi progreso en</span>
-                                    <br/>
+                                    
                                     <span className="inline-block mt-2 rounded-lg bg-white px-4 py-2 text-sm font-black text-blue-900 shadow-xl">
                                         @activat_gymdance
                                     </span>
