--- a/index.html
+++ b/index.html
@@ -700,18 +700,36 @@ const handleShareAchievement = async () => {
                             <div className="p-5">
                                 <h3 className="font-bold text-lg text-gray-800 mb-2">{w.title}</h3>
                                 <p className="text-gray-600 text-sm whitespace-pre-line border-t pt-2">{w.description}</p>
-                                {/* SECCIÓN DE NOTAS PERSONALES */}
-<div className="mt-4 mb-4">
+                            {/* SECCIÓN DE NOTAS PERSONALES */}
+<div className="mt-4 mb-4 bg-gray-50 p-3 rounded-2xl border border-gray-100">
     <label className="text-[10px] font-black text-gray-400 uppercase tracking-[0.2em] flex items-center gap-2 mb-2">
-        <Icon name="pen-to-square" /> Mis anotaciones (pesos, sensaciones...)
+        <Icon name="pen-to-square" /> Notas del entrenamiento
     </label>
     <textarea
+        id={`note-${w.id}`}
         defaultValue={w.clientNote || ""}
-        onBlur={(e) => handleUpdateNote(w.id, e.target.value)}
-        placeholder="Ej: He usado mancuernas de 5kg..."
-        className="w-full bg-gray-50 border border-gray-100 rounded-xl p-3 text-sm text-gray-700 focus:ring-2 focus:ring-blue-500 focus:bg-white transition-all outline-none resize-none"
+        placeholder="Peso usado, repeticiones..."
+        className="w-full bg-white border border-gray-200 rounded-xl p-3 text-sm text-gray-700 focus:ring-2 focus:ring-blue-500 transition-all outline-none resize-none"
         rows="2"
     />
+    <button 
+        onClick={(e) => {
+            const text = document.getElementById(`note-${w.id}`).value;
+            handleUpdateNote(w.id, text);
+            // Efecto visual de guardado
+            e.currentTarget.innerText = "¡GUARDADO!";
+            e.currentTarget.classList.add('bg-green-500');
+            setTimeout(() => {
+                if(e.currentTarget) {
+                    e.currentTarget.innerText = "GUARDAR NOTA";
+                    e.currentTarget.classList.remove('bg-green-500');
+                }
+            }, 2000);
+        }}
+        className="w-full mt-2 py-2 bg-blue-600 text-white text-[10px] font-bold rounded-lg hover:bg-blue-700 transition-all uppercase tracking-widest"
+    >
+        GUARDAR NOTA
+    </button>
 </div>
                                 {/* BOTÓN DE COMPLETADO */}
                                 <div className="mt-4 border-t pt-4">
