--- a/index.html
+++ b/index.html
@@ -171,42 +171,17 @@ const handleShareAchievement = async () => {
             };
             const handleUpdateNote = async (workoutId, noteText) => {
     try {
+        // Importante: usamos 'clientNote' como nombre de la columna
         const workoutRef = doc(db, 'workouts', workoutId);
         await updateDoc(workoutRef, {
             clientNote: noteText
         });
-        // Opcional: una pequeña notificación de "Guardado"
+        console.log("Nota guardada correctamente");
     } catch (error) {
         console.error("Error al guardar la nota:", error);
+        alert("Error al guardar la nota. Inténtalo de nuevo.");
     }
 };
-            // Definimos el contenido de las herramientas como una variable
-    const toolsContent = showTools ? (
-        <div className="fixed inset-0 z-[100] bg-black/80 flex items-end sm:items-center justify-center p-4">
-            <div className="bg-white w-full max-w-md rounded-t-3xl sm:rounded-3xl overflow-hidden shadow-2xl animate-in slide-in-from-bottom duration-300">
-                <div className="p-6">
-                    <div className="flex justify-between items-center mb-6">
-                        <h2 className="text-xl font-bold text-gray-800 flex items-center gap-2">
-                            <Icon name="screwdriver-wrench" /> Herramientas
-                        </h2>
-                        <button onClick={() => setShowTools(false)} className="text-gray-400 hover:text-red-500 text-2xl p-2">
-                            <Icon name="xmark" />
-                        </button>
-                    </div>
-                    
-                    {/* Aquí puedes meter el cronómetro que te pasé antes o empezar con un texto simple para probar */}
-                    <div className="bg-blue-50 p-8 rounded-2xl text-center mb-6">
-                        <p className="text-blue-600 font-bold">Próximamente: Cronómetro y Temporizador</p>
-                        <p className="text-xs text-blue-400 mt-2">Estamos ajustando los relojes...</p>
-                    </div>
-
-                    <button onClick={() => setShowTools(false)} className="w-full bg-gray-900 text-white py-4 rounded-2xl font-bold">
-                        CERRAR
-                    </button>
-                </div>
-            </div>
-        </div>
-    ) : null;
 
             useEffect(() => {
         let interval = null;
